<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_page">About My Files</string>
    <string name="about_page_new_version_available">A new version is available.</string>
    <string name="about_page_open_source">Open source license</string>
    <string name="about_page_retry">Retry</string>
    <string name="about_page_the_latest_version_installed">The latest version is installed.</string>
    <string name="about_page_unable_to_check">"Couldn't check for updates. Try again later."</string>
    <string name="about_page_update">Update</string>
    <string name="about_page_version">Version %s</string>
    <string name="activity_not_found">No apps available to complete this action.</string>
    <string name="add_account">Add account</string>
    <string name="added_to_favorites">%s folder added to Favorites.</string>
    <string name="alert_popup_body_connect_to_the_galaxy_store">"You don't have any apps that can open this type of file. You can search for one in the Galaxy Store."</string>
    <string name="alert_popup_body_connect_to_the_play_store">"You don't have any apps that can open this type of file. You can search for one in the Play Store."</string>
    <string name="all">All</string>
    <string name="all_files">All</string>
    <string name="allow">Allow</string>
    <string name="allow_mobile_data_usage">Allow mobile data usage</string>
    <string name="allow_usage_tracking_body">To see how much space your apps are using, go to Settings and allow My Files to track your app usage.</string>
    <string name="allow_usage_tracking_title">Allow usage tracking</string>
    <string name="already_in_favorites">"That's already in Favorites."</string>
    <string name="analyze_storage">Analyze storage</string>
    <string name="analyze_storage_chart_label_used">used</string>
    <string name="analyze_storage_indicator_descriptipn" formatted="false">Page %d of %d</string>
    <string name="another_process_is_already_in_progress">Another process is already in progress. Waiting for this process to end…</string>
    <string name="app_info">App info</string>
    <string name="app_name">My Files</string>
    <string name="app_restrictions_edit_my_files_home">Edit My Files Home</string>
    <string name="app_restrictions_toggle_the_cloud_storage">Toggle the hiding or not the cloud storage in My Files home.</string>
    <string name="appbar_base_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appear_on_top">Appear on top</string>
    <string name="appear_on_top_description">Used to open and share files when using Bixby</string>
    <string name="ascending">Ascending</string>
    <string name="ascending_label">Sort in ascending order</string>
    <string name="ask_us_open_samsung_cloud">Ask us to open Samsung Cloud</string>
    <string name="audio">Audio</string>
    <string name="audio_only">Audio only</string>
    <string name="back_up">Backups</string>
    <string name="base_name_folder">Folder</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_change">Change</string>
    <string name="button_create">Create</string>
    <string name="button_done">Done</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="byteShort">B</string>
    <string name="cached_files">Cached files</string>
    <string name="calculating_child_count">Calculating…</string>
    <string name="can_not_run_file_operation">You can perform up to %d operations. Please try again after the previous operation is completed.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_copying_and_clear_clipboard">Cancel copying and clear clipboard</string>
    <string name="cancel_moving_and_clear_clipboard">Cancel moving and clear clipboard</string>
    <string name="cannot_copy_file">"Can't copy file"</string>
    <string name="cannot_move_file">"Can't move file"</string>
    <string name="cannot_move_file_trash">"Can't move file to the Trash"</string>
    <string name="cannot_move_files_trash">"Can't move files to the Trash"</string>
    <string name="cannot_move_folder_trash">"Can't move folder to the Trash"</string>
    <string name="cannot_move_folders_trash">"Can't move folders to the Trash"</string>
    <string name="cannot_move_items_trash">"Can't move items to the Trash"</string>
    <string name="capital_cancel">CANCEL</string>
    <string name="capital_settings">SETTINGS</string>
    <string name="change_file_extension">Change file extension</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_your_network_connection">Check your network connection.</string>
    <string name="checked">Checked</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_some_space_for_restore_file_on_samsung_drive">Clear some space in %s to restore the selected file.</string>
    <string name="clear_some_space_for_restore_file_on_your_phone">Clear some space on your phone to restore this file.</string>
    <string name="clear_some_space_for_restore_file_on_your_tablet">Clear some space on your tablet to restore this file.</string>
    <string name="clear_some_space_for_restore_files_on_samsung_drive">Clear some space in %s to restore the selected files.</string>
    <string name="clear_some_space_for_restore_files_on_your_phone">Clear some space on your phone to restore these files.</string>
    <string name="clear_some_space_for_restore_files_on_your_tablet">Clear some space on your tablet to restore these files.</string>
    <string name="clear_some_space_for_restore_folder_on_samsung_drive">Clear some space in %s to restore the selected folder.</string>
    <string name="clear_some_space_for_restore_folder_on_your_phone">Clear some space on your phone to restore this folder.</string>
    <string name="clear_some_space_for_restore_folder_on_your_tablet">Clear some space on your tablet to restore this folder.</string>
    <string name="clear_some_space_for_restore_folders_on_samsung_drive">Clear some space in %s to restore the selected folders.</string>
    <string name="clear_some_space_for_restore_folders_on_your_phone">Clear some space on your phone to restore these folders.</string>
    <string name="clear_some_space_for_restore_folders_on_your_tablet">Clear some space on your tablet to restore these folders.</string>
    <string name="clear_some_space_for_restore_items_on_samsung_drive">Clear some space in %s to restore the selected items.</string>
    <string name="clear_some_space_for_restore_items_on_your_phone">Clear some space on your phone to restore these items.</string>
    <string name="clear_some_space_for_restore_items_on_your_tablet">Clear some space on your tablet to restore these items.</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clipboard_shown">Clipboard shown</string>
    <string name="empty">Empty</string>
    <string name="menu_add_to_favorites">Add to Favorites</string>
    <string name="menu_add_to_home_screen">Add to Home screen</string>
    <string name="menu_analyze_storage">Analyze storage</string>
    <string name="menu_att_cloud">AT&amp;T Personal Cloud</string>
    <string name="menu_clear_recent_files">Clear recent files list</string>
    <string name="menu_compress">Compress</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_create_folder">Create folder</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_details">Details</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_extract">Extract</string>
    <string name="menu_extract_to_current_folder">Extract to current folder</string>
    <string name="menu_move">Move</string>
    <string name="menu_move_out_of_secure_folder_ps">Move out of %s</string>
    <string name="menu_move_to_personal_mode">Move to Personal</string>
    <string name="menu_move_to_ps">Move to %s</string>
    <string name="menu_move_to_secure_folder_ps">Move to %s</string>
    <string name="menu_open">Open</string>
    <string name="menu_open_in_new_window">Open in new window</string>
    <string name="menu_open_with">Open with</string>
    <string name="menu_remove_from_favorites">Remove from Favorites</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_show_hidden_files">Show hidden system files</string>
    <string name="menu_show_in_folder">Show in folder</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_toggle_list_list">List</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_trash_sub">Keep deleted files and folders for 30 days.</string>
    <string name="menu_verizon_cloud">Verizon Cloud</string>
    <string name="menu_view">View</string>
    <string name="not_now">Not now</string>
    <string name="permissions_special">Special sensitive required permissions</string>
    <string name="permissions_special_optional">Special sensitive optional permissions</string>
    <string name="required_permissions">Required permissions</string>
    <string name="restore">Restore</string>
    <string name="switch_to_one_drive_text_body">Switch from %s to OneDrive to keep you important files safe and available on all your devices.</string>
    <string name="usage_data_access">Usage data access</string>
    <string name="usage_data_access_description">Used to check how much storage space apps are using</string>
</resources>