<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/actionbar_search" android:id="@id/menu_search" android:title="@string/menu_search" app:showAsAction="always|collapseActionView" />
    <item android:id="@id/menu_edit" android:visible="false" android:title="@string/menu_edit" android:showAsAction="never" />
    <item android:id="@id/menu_share" android:visible="false" android:title="@string/menu_share" android:showAsAction="never" />
    <item android:id="@id/menu_view_list_type" android:visible="false" android:title="@string/menu_view" android:showAsAction="never" />
    <item android:id="@id/menu_clear_recent_files" android:visible="false" android:title="@string/menu_clear_recent_files" android:showAsAction="never" />
    <item android:id="@id/menu_analyze_storage" android:visible="false" android:title="@string/menu_analyze_storage" android:showAsAction="never" />
    <item android:id="@id/menu_trash" android:visible="false" android:title="@string/menu_trash" android:showAsAction="never" />
    <item android:id="@id/menu_settings" android:title="@string/menu_settings" android:showAsAction="never" />
    <item android:id="@id/menu_contact_us" android:visible="false" android:title="@string/menu_contact_us" android:showAsAction="never" />
</menu>