<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/bottom_menu_detail" android:id="@id/menu_details" android:title="@string/menu_details" app:contentDescription="@string/menu_details" app:showAsAction="always" />
    <item android:icon="@drawable/bottom_menu_share" android:id="@id/menu_share" android:title="@string/menu_share" app:contentDescription="@string/menu_share" app:showAsAction="always" />
    <item android:icon="@drawable/bottom_menu_delete" android:id="@id/menu_delete" android:title="@string/menu_delete" app:contentDescription="@string/menu_delete" app:showAsAction="always" />
    <item android:id="@id/menu_move_to_secure_folder" android:visible="false" android:title="@string/menu_move_to_secure_folder_ps" app:showAsAction="never" />
    <item android:id="@id/menu_move_to_knox" android:visible="false" android:title="@string/menu_move" app:showAsAction="never" />
    <item android:id="@id/menu_move_to_workspace" android:visible="false" android:title="@string/menu_move_to_ps" app:showAsAction="never" />
    <item android:id="@id/menu_move_to_personal" android:visible="false" android:title="@string/menu_move_to_personal_mode" app:showAsAction="never" />
    <item android:id="@id/menu_move_out_of_secure_folder" android:visible="false" android:title="@string/menu_move_out_of_secure_folder_ps" app:showAsAction="never" />
</menu>