<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/menu_sync" android:visible="false" android:title="@string/menu_sync" android:showAsAction="never" />
    <item android:id="@id/menu_edit" android:visible="false" android:title="@string/menu_edit" android:showAsAction="never" />
    <item android:id="@id/menu_share" android:visible="false" android:title="@string/menu_share" android:showAsAction="never" />
    <item android:id="@id/menu_create_folder" android:visible="false" android:title="@string/menu_create_folder" android:showAsAction="never" />
    <item android:id="@id/menu_toggle_list_type" android:visible="false" android:title="@string/menu_toggle_list_list" android:showAsAction="never" />
    <item android:id="@id/menu_clear_recent_files" android:visible="false" android:title="@string/menu_clear_recent_files" android:showAsAction="never" />
    <item android:id="@id/menu_add_network_storage_server" android:visible="false" android:title="" android:showAsAction="never" />
    <item android:id="@id/menu_settings" android:title="@string/menu_settings" android:showAsAction="never" />
</menu>