<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/bottom_menu_restore" android:id="@id/menu_restore" android:title="@string/restore" app:contentDescription="@string/restore" app:showAsAction="always" />
    <item android:icon="@drawable/bottom_menu_detail" android:id="@id/menu_details" android:title="@string/menu_details" app:contentDescription="@string/menu_details" app:showAsAction="always" />
    <item android:icon="@drawable/bottom_menu_delete" android:id="@id/menu_delete" android:title="@string/menu_delete" app:contentDescription="@string/menu_delete" app:showAsAction="always" />
    <item android:id="@id/menu_empty_trash" android:visible="false" android:title="@string/empty" android:showAsAction="never" />
</menu>