<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/bottom_menu_move" android:id="@id/menu_move" android:title="@string/menu_move" app:contentDescription="@string/menu_move" app:showAsAction="always" />
    <item android:icon="@drawable/bottom_menu_copy" android:id="@id/menu_copy" android:title="@string/menu_copy" app:contentDescription="@string/menu_copy" app:showAsAction="always" />
    <item android:icon="@drawable/bottom_menu_detail" android:id="@id/menu_details" android:title="@string/menu_details" app:contentDescription="@string/menu_details" app:showAsAction="always" />
    <item android:icon="@drawable/bottom_menu_delete" android:id="@id/menu_delete" android:title="@string/menu_delete" app:contentDescription="@string/menu_delete" app:showAsAction="always" />
</menu>