<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/permission_notice_layout_margin_start_end" android:layout_marginEnd="@dimen/permission_notice_layout_margin_start_end">
        <TextView android:textSize="@dimen/permission_notice_text_size" android:textColor="@color/permission_notice_description_text_color" android:paddingTop="@dimen/permission_notice_layout_padding_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/permission_title_margin_bottom" android:text="@string/required_permissions" style="@style/RobotoRegular" />
        <include android:id="@id/storage_permission" layout="@layout/preference_permissions" />
        <TextView android:textSize="@dimen/permission_notice_text_size" android:textColor="@color/permission_notice_description_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/permission_description_title_margin_top" android:layout_marginBottom="@dimen/permission_description_title_margin_bottom" android:text="@string/permissions_special" style="@style/RobotoRegular" />
        <TextView android:textSize="@dimen/permission_notice_text_size" android:textColor="@color/permission_notice_description_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/appear_on_top" style="@style/RobotoMedium" />
        <TextView android:textSize="@dimen/permission_notice_text_size" android:textColor="@color/permission_notice_description_index_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/appear_on_top_description" style="@style/RobotoRegular" />
        <TextView android:textSize="@dimen/permission_notice_text_size" android:textColor="@color/permission_notice_description_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/permission_description_title_margin_top" android:layout_marginBottom="@dimen/permission_description_title_margin_bottom" android:text="@string/permissions_special_optional" style="@style/RobotoRegular" />
        <TextView android:textSize="@dimen/permission_notice_text_size" android:textColor="@color/permission_notice_description_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/usage_data_access" style="@style/RobotoMedium" />
        <TextView android:textSize="@dimen/permission_notice_text_size" android:textColor="@color/permission_notice_description_index_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/usage_data_access_description" style="@style/RobotoRegular" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>